# SADAR

./: .gitignore  CLAUDE.md  README.md  README_KODE.md  ROADMAP.md  pyproject.toml  requirements.txt
blueprint/: 00_SCOPE.md  01_STATE_TYPES.md  02_LOOP.md  03_DETERMINISM_CONSTITUTION.md  04_INTEGRATIONS.md  05_BUILD_VERIFY.md
sadar/: __init__.py  config.py  doctor.py  main.py  mic_test.py  text_chat.py  voice_chat.py
sadar/core/: __init__.py  constitution.py  dosir.py  loop.py  mathx.py  memory.py  metabolism.py  organ_b.py  ports.py  protocol.py  spectral.py
sadar/organs/: __init__.py  audit_local.py  backend_claude.py  backend_offline.py  backend_ollama.py  channel_telegram.py  composite.py  confirm.py  effector_local.py  effector_shell.py  effector_web.py  memory_markdown.py  memory_sqlitevec.py  perceiver_local.py  proposal_store.py  skill_effector.py  skill_store.py  tool_draft.py  tool_manage.py  user_model.py  voice.py
sadar/roles/: __init__.py  registry.py
sadar/skills/: notes.md  (+3 more)
scripts/: doctor.py  fix_key.py  review_proposals.py
tests/: mocks.py  test_audit.py  test_backend_ollama.py  test_blind_platform.py  test_calibration.py  test_channel.py  test_constitution.py  test_doctor.py  test_embedder.py  test_introspection.py  test_loop.py  test_memory.py  test_mirror.py  test_name_reflex.py  test_organ_b.py  test_pola1.py  test_policy.py  test_protocol.py  test_roles.py  test_safety.py  test_sandbox.py  test_shell.py  test_skill_creator.py  test_skills.py  test_spectral.py  test_sqlitevec.py  test_summary.py  test_text.py  test_tool_draft.py  test_tool_manage.py  test_user_model.py  test_voice.py  test_web.py  test_world_grounding.py
(+3 files in other folders)
